--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,12 +1,4 @@
 repos:
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.18.1
-    hooks:
-      - id: mypy
-        args: [--show-error-codes, --pretty]
-        additional_dependencies:
-          - types-requests
-          - types-PyYAML
 
 
 
@@ -14,6 +6,7 @@ repos:
     rev: v0.12.0
     hooks:
       - id: ruff-check
+        args: [--fix, --unsafe-fixes]
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v6.0.0
